--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,22 @@
 body {
   font-family: var(--ff-body);
 }
+
+.container {
+  display: grid;
+  grid-template: 22.25rem 1fr / 37.875rem 1fr;
+  height: 100%;
+}
+
+.sidebar {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.header {
+  grid-area: 1 / 2 / 2 / 3;
+  display: flex;
+}
+
+.main-content {
+  grid-area: 2 / 2 / 3 / 3;
+}
