--- a/css/style.css
+++ b/css/style.css
@@ -159,11 +159,6 @@
   width: 6rem;
 }
 
-.icon-white {
-  filter: invert(100%) sepia(0) saturate(100%) hue-rotate(0) brightness(100%)
-    contrast(100%);
-}
-
 .avatar {
   width: 6.25rem;
   border-radius: 50%;
@@ -214,6 +209,10 @@
     0 0.25rem 0.375rem -0.25rem var(--box-shadow-color);
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 body {
   font-family: var(--ff-body);
 }
@@ -226,6 +225,44 @@ body {
 
 .sidebar {
   grid-area: 1 / 1 / 3 / 2;
+  display: grid;
+  align-content: start;
+  row-gap: 3rem;
+}
+
+.sidebar a {
+  color: var(--clr-neutral-100);
+  text-decoration: none;
+}
+
+.sidebar .nav-item,
+.sidebar .logo {
+  display: grid;
+  grid-template-columns: 6rem 1fr;
+  align-items: center;
+  column-gap: 1.5rem;
+}
+
+.sidebar .nav-item {
+  padding: 1.75rem 2.125rem;
+}
+
+.sidebar .nav-item:hover {
+  background-color: var(--clr-accent-400);
+}
+
+.sidebar .logo {
+  padding: 2.25rem 2.125rem;
+}
+
+.sidebar .nav-icon {
+  filter: invert(100%) sepia(0) saturate(100%) hue-rotate(0) brightness(100%)
+    contrast(100%);
+  justify-self: center;
+}
+
+.sidebar > ul:first-of-type {
+  margin-bottom: 1.75rem;
 }
 
 .header {
