--- a/css/style.css
+++ b/css/style.css
@@ -181,21 +181,21 @@
   border-radius: calc(var(--height) / 2);
   border: none;
   cursor: pointer;
-  margin: 1rem 1rem 0 0;
 }
 
 .text-input {
-  --width: 75rem;
+  --width: clamp(30rem, 100%, 75rem);
   --height: 3.75rem;
+  --padding: 2rem;
 
   background-color: var(--clr-neutral-400);
   font-size: var(--fs-400);
   width: var(--width);
   height: var(--height);
-  border-radius: calc(var(--height) / 2);
+  border-radius: calc(var(--height) / 2 + var(--padding));
   border: none;
   outline: 0;
-  padding: 1rem;
+  padding: var(--padding);
 }
 
 .card {
@@ -267,7 +267,61 @@ body {
 
 .header {
   grid-area: 1 / 2 / 2 / 3;
-  display: flex;
+  display: grid;
+  grid-template: 1fr 1fr / 1fr max-content;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 7rem;
+  padding: 2rem 5.625rem;
+}
+
+.header > .search-bar {
+  grid-area: 1 / 1 / 2 / 2;
+  display: grid;
+  grid-template: 1fr / min-content 1fr;
+  align-items: center;
+  column-gap: 2.5rem;
+}
+
+.header > .user-info {
+  grid-area: 1 / 2 / 2 / 3;
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.header > .greeting {
+  grid-area: 2 / 1 / 3 / 2;
+  display: grid;
+  grid-template: 1fr 1fr / min-content max-content;
+  align-items: center;
+  column-gap: 3rem;
+}
+
+.header > .greeting > .avatar {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.header > .greeting > span:first-child {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.header > .greeting > span:last-child {
+  grid-area: 2 / 2 / 3 / 3;
+  align-self: start;
+}
+
+.header > .buttons {
+  grid-area: 2 / 2 / 3 / 3;
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 3rem;
+}
+
+.header a {
+  color: var(--clr-neutral-900);
+  text-decoration: none;
 }
 
 .main-content {
