--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,6 @@
 
   background-color: var(--clr-neutral-100);
   border-radius: 1rem;
-  margin: 1rem;
   box-shadow:
     0 0.625rem 0.9375rem -0.1875rem var(--box-shadow-color),
     0 0.25rem 0.375rem -0.25rem var(--box-shadow-color);
@@ -215,17 +214,21 @@
 
 body {
   font-family: var(--ff-body);
+  background-color: var(--clr-neutral-400);
+  height: 100vh;
 }
 
 .container {
   display: grid;
   grid-template: 22.25rem 1fr / 37.875rem 1fr;
+  align-items: start;
   height: 100%;
 }
 
 .sidebar {
   grid-area: 1 / 1 / 3 / 2;
   display: grid;
+  align-self: stretch;
   align-content: start;
   row-gap: 3rem;
 }
@@ -326,4 +329,96 @@ body {
 
 .main-content {
   grid-area: 2 / 2 / 3 / 3;
+  display: grid;
+  grid-template: max-content 1fr / 1fr 35rem;
+  gap: 4.5rem 2.5rem;
+  align-items: start;
+  column-gap: 2.5rem;
+  padding: 4.5rem 3.25rem 4.5rem 2.5rem;
+}
+
+.main-content h2 {
+  margin-bottom: 2rem;
+}
+
+.main-content > .projects {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.main-content > .announcements {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.main-content > .trending {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+.projects .cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+  gap: 3.5rem;
+}
+
+.projects .card {
+  display: grid;
+  grid-template-rows: max-content max-content 1fr;
+  row-gap: 1rem;
+  height: 27rem;
+  border-left: 1rem solid var(--clr-accent-400);
+  padding: 4.5rem 2.75rem 3.75rem 3.75rem;
+  overflow: scroll;
+}
+
+.projects .card-buttons {
+  place-self: end end;
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 4rem;
+}
+
+.announcements .card {
+  padding: 4rem;
+  /* padding: 4rem 4rem auto 4rem; */
+}
+
+.announcement-item:not(:last-child) {
+  padding-bottom: 2.5rem;
+  border-bottom: solid 0.125rem var(--clr-neutral-500);
+}
+
+.announcement-item:not(:first-child) {
+  padding-top: 2.5rem;
+}
+
+.trending .card {
+  padding: 2.5rem;
+  display: grid;
+  grid-auto-rows: 1fr;
+  row-gap: 3rem;
+}
+
+.trending-item {
+  display: grid;
+  grid-template: 1fr 1fr / max-content 1fr;
+  align-items: center;
+  column-gap: 2rem;
+}
+
+.trending-item .avatar {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.trending-item .username {
+  align-self: end;
+}
+
+.trending a {
+  color: var(--clr-neutral-900);
+  text-decoration: none;
+}
+
+hr {
+  height: 0.1875rem;
+  background-color: var(--clr-neutral-500);
+  border: 0;
 }
