--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,16 @@
   --fw-semi-bold: 500;
   --fw-bold: 700;
 
-  --fs-100: 1.5rem;
-  --fs-200: 1.625rem;
-  --fs-300: 1.75rem;
-  --fs-400: 1.875rem;
-  --fs-500: 2rem;
-  --fs-600: 2.3125rem;
-  --fs-700: 2.5rem;
-  --fs-800: 2.75rem;
-  --fs-900: 3rem;
-  --fs-950: 3.5rem;
+  --fs-100: 0.75rem;
+  --fs-200: 0.8125rem;
+  --fs-300: 0.875rem;
+  --fs-400: 0.9375rem;
+  --fs-500: 1rem;
+  --fs-600: 1.15625rem;
+  --fs-700: 1.25rem;
+  --fs-800: 1.375rem;
+  --fs-900: 1.5rem;
+  --fs-950: 1.75rem;
 }
 
 .text-primary-400 {
@@ -151,26 +151,26 @@
 }
 
 .icon {
-  width: 3rem;
+  width: 1.5rem;
   cursor: pointer;
 }
 
 .icon-lrg {
-  width: 6rem;
+  width: 3rem;
 }
 
 .avatar {
-  width: 6.25rem;
+  width: 3.125rem;
   border-radius: 50%;
 }
 
 .avatar-lrg {
-  width: 9.375rem;
+  width: 4.6875rem;
 }
 
 .button {
-  --width: 12.5rem;
-  --height: 5rem;
+  --width: 6.25rem;
+  --height: 2.5rem;
 
   color: var(--clr-neutral-100);
   background-color: var(--clr-primary-400);
@@ -184,9 +184,9 @@
 }
 
 .text-input {
-  --width: clamp(30rem, 100%, 75rem);
-  --height: 3.75rem;
-  --padding: 2rem;
+  --width: clamp(15rem, 100%, 37.5rem);
+  --height: 1.875rem;
+  --padding: 1rem;
 
   background-color: var(--clr-neutral-400);
   font-size: var(--fs-400);
@@ -202,7 +202,7 @@
   --box-shadow-color: rgb(0 0 0 / 0.1);
 
   background-color: var(--clr-neutral-100);
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   box-shadow:
     0 0.625rem 0.9375rem -0.1875rem var(--box-shadow-color),
     0 0.25rem 0.375rem -0.25rem var(--box-shadow-color);
@@ -220,7 +220,8 @@ body {
 
 .container {
   display: grid;
-  grid-template: 22.25rem 1fr / 37.875rem 1fr;
+  /* grid-template: 22.25rem 1fr / 37.875rem 1fr; */
+  grid-template: 11.125rem 1fr / 18.9375rem 1fr;
   align-items: start;
   height: 100%;
 }
@@ -230,7 +231,7 @@ body {
   display: grid;
   align-self: stretch;
   align-content: start;
-  row-gap: 3rem;
+  row-gap: 1.5rem;
 }
 
 .sidebar a {
@@ -241,13 +242,13 @@ body {
 .sidebar .nav-item,
 .sidebar .logo {
   display: grid;
-  grid-template-columns: 6rem 1fr;
+  grid-template-columns: 3rem 1fr;
   align-items: center;
-  column-gap: 1.5rem;
+  column-gap: 0.75rem;
 }
 
 .sidebar .nav-item {
-  padding: 1.75rem 2.125rem;
+  padding: 0.875rem 1.0625rem;
 }
 
 .sidebar .nav-item:hover {
@@ -255,7 +256,7 @@ body {
 }
 
 .sidebar .logo {
-  padding: 2.25rem 2.125rem;
+  padding: 1.125rem 1.0625rem;
 }
 
 .sidebar .nav-icon {
@@ -265,7 +266,7 @@ body {
 }
 
 .sidebar > ul:first-of-type {
-  margin-bottom: 1.75rem;
+  margin-bottom: 0.875rem;
 }
 
 .header {
@@ -274,8 +275,8 @@ body {
   grid-template: 1fr 1fr / 1fr max-content;
   align-items: center;
   justify-content: space-between;
-  column-gap: 7rem;
-  padding: 0 5.625rem 2rem 5.625rem;
+  column-gap: 3rem;
+  padding: 0 2.8125rem 1rem 2.8125rem;
 }
 
 .header > .search-bar {
@@ -283,7 +284,7 @@ body {
   display: grid;
   grid-template: 1fr / min-content 1fr;
   align-items: center;
-  column-gap: 2.5rem;
+  column-gap: 1.25rem;
 }
 
 .header > .user-info {
@@ -299,7 +300,7 @@ body {
   display: grid;
   grid-template: 1fr 1fr / min-content max-content;
   align-items: center;
-  column-gap: 3rem;
+  column-gap: 1.5rem;
 }
 
 .header > .greeting > .avatar {
@@ -319,7 +320,7 @@ body {
   grid-area: 2 / 2 / 3 / 3;
   display: grid;
   grid-auto-flow: column;
-  column-gap: 3rem;
+  column-gap: 1.5rem;
 }
 
 .header a {
@@ -330,15 +331,15 @@ body {
 .main-content {
   grid-area: 2 / 2 / 3 / 3;
   display: grid;
-  grid-template: max-content 1fr / 1fr 35rem;
-  gap: 4.5rem 2.5rem;
+  grid-template: max-content 1fr / 1fr 17.5rem;
+  gap: 2.25rem 1.25rem;
   align-items: start;
-  column-gap: 2.5rem;
-  padding: 4.5rem 3.25rem 4.5rem 2.5rem;
+  column-gap: 1.25rem;
+  padding: 2.25rem 1.625rem 2.25rem 1.25rem;
 }
 
 .main-content h2 {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .main-content > .projects {
@@ -355,17 +356,17 @@ body {
 
 .projects .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
-  gap: 3.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  gap: 1.75rem;
 }
 
 .projects .card {
   display: grid;
   grid-template-rows: max-content max-content 1fr;
-  row-gap: 1rem;
-  height: 27rem;
-  border-left: 1rem solid var(--clr-accent-400);
-  padding: 4.5rem 2.75rem 3.75rem 3.75rem;
+  row-gap: 0.5rem;
+  height: 13.5rem;
+  border-left: 0.5rem solid var(--clr-accent-400);
+  padding: 2.25rem 1.375rem 1.875rem 1.875rem;
   overflow: scroll;
 }
 
@@ -373,38 +374,38 @@ body {
   place-self: end end;
   display: grid;
   grid-auto-flow: column;
-  column-gap: 4rem;
+  column-gap: 2rem;
 }
 
 .announcements .card {
-  padding: 4rem;
+  padding: 2rem;
 }
 
 .announcement-item:not(:last-child) {
-  padding-bottom: 2.5rem;
-  border-bottom: solid 0.125rem var(--clr-neutral-500);
+  padding-bottom: 1.25rem;
+  border-bottom: solid 0.0625rem var(--clr-neutral-500);
 }
 
 .announcement-item:not(:first-child) {
-  padding-top: 2.5rem;
+  padding-top: 1.25rem;
 }
 
 .announcement-item h3 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .trending .card {
-  padding: 2.5rem;
+  padding: 1.25rem;
   display: grid;
   grid-auto-rows: 1fr;
-  row-gap: 3rem;
+  row-gap: 1.5rem;
 }
 
 .trending-item {
   display: grid;
   grid-template: 1fr 1fr / max-content 1fr;
   align-items: center;
-  column-gap: 2rem;
+  column-gap: 1rem;
 }
 
 .trending-item .avatar {
