--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,10 @@ body {
   justify-content: space-between;
   column-gap: 3rem;
   padding: 0 2.8125rem 1rem 2.8125rem;
+
+  box-shadow:
+    rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
 .header > .search-bar {
