--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --clr-primary-400: #1992d4;
   --clr-accent-400: #f0b429;
+  --clr-accent-500: #d8a225;
   --clr-neutral-100: #fff;
   --clr-neutral-400: #e2e8f0;
   --clr-neutral-500: #d2d2d2;
@@ -183,6 +184,15 @@
   cursor: pointer;
 }
 
+.button:hover {
+  background-color: var(--clr-accent-400);
+}
+
+.button:active {
+  background-color: var(--clr-accent-500);
+}
+
+
 .text-input {
   --width: clamp(15rem, 100%, 37.5rem);
   --height: 1.875rem;
@@ -259,6 +269,10 @@ body {
 
 .sidebar .nav-item:hover {
   background-color: var(--clr-accent-400);
+}
+
+.sidebar .nav-item:active {
+  background-color: var(--clr-accent-500);
 }
 
 .sidebar .logo {
